Changes for 1.6.5

 - [ZBX-901] fixed possible bug on trigger creation (Artem)
 - [ZBX-900] fixed adding several user to group with Oracle DB (Artem)
 - [ZBX-894] fixed processing of {HOSTNAME} for trigger name if the trigger expression consists of several items (Sasha)
 - [ZBX-894] fixed processing of {ITEM.NAME},{HOSTNAME},{IPADDRESS} and {TRIGGER.KEY} for alerts if the trigger expression consists of several items (Sasha)
 - [ZBX-897] fixed user groups rights adding for host groups (Vedmak)
 - [ZBX-896] improved performance of processing of IT services. Added database index (Sasha)
 - [DEV-137] fixed incorrect comment for TrapperTimeout option in zabbix_server.conf (Sasha)
 - [ZBX-894] fixed processing of {ITEM.LASTVALUE} for alerts if the trigger expression consists of several items (Sasha) 
 - [ZBX-893] fixed error creating trigger when in Host dropdown selected All (Vedmak)
 - [ZBX-888] more supported GSM modems (ignoring AT+CMEE command) (Sasha)
 - [ZBX-884] fixed sudden stop of Jabber notifications (Sasha)
 - [ZBX-884] added subject field for Jabber notifications (Sasha)
 - [ZBX-460] fixed processing `distclean' target of `Makefile' for zabbix_proxy (Dmitry)
 - [ZBX-882] fixed template linkage form (Artem)
 - [ZBX-879] fixed maximum 30 issues shown in Dahsboard system status (Vedmak)
 - [ZBX-876] removed unused files (Artem)
 - [ZBX-872] fixed group selected in another section of Hosts affects shown proxy members, and proxies shown in Items host dropdown (Vedmak)
 - [ZBX-874] fixed evaluation of items nextcheck for flexible intervals (Sasha) 
 - [ZBX-868] fixed incorrect processing of not supported internal checks (Alexei)
 - [ZBX-867] added php sockets check to installation wizard (Artem)
 - [ZBX-865] fixed displaying templates without groups in tempalte linkage page (Artem)
 - [ZBX-857] changed queue details timestamp to timestamp defined in locale file (Artem)
 - [ZBX-864] fixed problem when saving screen item without selected item (Artem)